--- a/CSS/Kutu.margin.css
+++ b/CSS/Kutu.margin.css
@@ -3,12 +3,19 @@ body {
     padding: 0;
 }
 
+.left-bar{
+    width: 200px;
+}
+
+.content{
+    width: 800px;
+}
 .container {
     
     width: 1000px;
     /* margin-left: auto;
     margin-right: auto; */
-    margin: 50px auto 0; 
+    /* margin: 50px auto 0;  */
 }
 .left-bar {
     width: 200px;
